static/style.css
@import url('/static/Ramabhadra/Ramabhadra-Regular.ttf');

/* h1 {
    font-family: Ramabhadra;
} */

/* 
body {
    font-family: Helvetica, sans-serif;
    /* background-color: #F24940; */
    /* color: #; */
    /* text-align: center; */
    /* height: 100%; */
/* } */ 

.center-block {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.title-row {
  padding: 5px;
  background-color: #f1f5f8;
  border-radius: 8px;
}

.profile-row {
  padding: 10px;
  margin: 20px;
}

h3 {
  padding: 5px;
}

.link-header {
  color: #000000;
  text-decoration: none;
}

.link-header:hover {
  color: #000000;
}


.skill-item {
  border-radius: 8px;
  background: #df847d;
  padding: 5px;
  width: 80px;
  height: 40px;
}

.genre-item {
  border-radius: 8px;
  background: #e9ecef;
  padding: 5px;
  width: 100px;
  height: 50px;
}

.user-data {
  font-weight: bold;
}

  li {
    display: inline;
  }

  ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
  }

  .user_icon {
      max-width:6%;
      height:auto;
  }

  button {
    display:inline-block;
    padding:0.5em 3em;
    border:0.16em solid #050505;
    margin:0 0.3em 0.3em 0;
    box-sizing: border-box;
    text-decoration:none;
    /* text-transform:uppercase; */
    font-family:'Roboto',sans-serif;
    font-weight:400;
    color:#000000;
    text-align:center;
    transition: all 0.15s;
    background-color: #ffffff;
    }
  button:hover {
    color:#df847d;
    border-color:#df847d;
    }

